<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PonRodHome!</string>
    <string name="app_name">PonRod</string>
    <string name="app_name_thai">ผ่อนรถ</string>
    <string name="series_name">Model :</string>
    <string name="series_price">Price (Baht) :</string>
    <string name="downpayment">Down payment (Baht) :</string>
    <string name="month">Total months : </string>
    <string name="percent">In percent (%)</string>
    <string name="interest_rate">Interest Rate (%)  : </string>
    <string name="amount">In cash (Baht)</string>
    <string name="total_interest">Total interest (Baht) :</string>
    <string name="total_payment">Total payment :</string>
    <string name="pay_monthly">Baht / Month</string>
    <string name="about_1">แอพพลิเคชั่นนี้ตั้งใจเพื่อช่วยให้ผู้ที่กำลังมองหารถใหม่ป้ายแดงได้คำนวณราคาผ่อนจ่ายคร่าวๆก่อนไปเยี่ยมชมโชว์รูมหรือการตัดสินใจผ่อนซื้อ </string>
    <string name="about_2">ในเวอร์ชั่นนี้ มีข้อมูลอ้างอิงตามเว็บไซต์ตามผู้ผลิตดังต่อไปนี้</string>
    <string name="about_honda">1. Honda Automobile (Thailand) Co.,Ltd</string>
    <string name="about_honda_web">http://www.honda.co.th</string>
    <string name="about_nissan">2. Nissan Motor (Thailand) Co.,Ltd</string>
    <string name="about_nissan_web">http://www.nissan.co.th</string>
    <string name="about_mazda">3. Mazda Sales (Thailand) Co.,Ltd</string>
    <string name="about_mazda_web">http://www.mazda.co.th</string>
    <string name="about_3">ผู้สร้างขอสงวนสิทธิ์ในตัวแอพพลิเคชั่นนี้ในการสร้างซํ้า หรือเลียนแบบฟังก์ชั่นการทำงานทุกอย่างตามพระราชบัญญัติลิขสิทธิ์ พ.ศ. 2537 แห่งราชอาณาจักรไทย</string>
    <string name="about_4">ผู้พัฒนา : นายจิรภัทร จอกดี</string>
    <string name="about_5">Developer : Jiraphat Jokdee</string>
    <string name="about_6">Support :http://www.programmour.com/</string>
    <string name="about_7">Email : meense49@gmail.com</string>
    <string name="about_8">Copyright © 2012 - 2013 All Rights Reserved.</string>
    <string name="about_1_1">แอพพลิเคชั่นตัวนี้แจกฟรีไม่มีการเก็บค่าใช้จ่ายใดๆทั้งสิ้น</string>
    <string name="about_1_2">(ยกเว้นการเชื่อมต่ออินเตอร์เน็ตและค่าใช้จ่ายของการรับส่งข้อมูลผ่านระบบอินเตอร์เน็ตบนมือถือที่แอพพลิเคชั่นจำเป็นต้องเชื่อมต่อเพื่อดึงข้อมูลมาประมาลผลตามรุ่นรถต่างๆที่ผู้ใช้งานต้องดูแลค่าใช้จ่ายเองตามระบบที่ท่านใช้งาน)</string>
    <string name="version">About version 1.6.2</string>
    <string name="font_support">ฟอนต์ไทย: นายวริทธิ์  ไชยกูล(www.f0nt.com)</string>
    <string name="custom_calculation">Custom Calculation</string>
    <string name="choose_brand">Choose brand...</string>
    <string name="choose_model">Choose car model...</string>
    <string name="down_payment_select">Select down payment type :</string>
    <string name="about_ford">4. Ford Sales &amp; Service (Thailand) Co., Ltd.</string>
    <string name="about_ford_web">http://www.ford.co.th</string>
    <string name="about_toyota">5. Toyota Motor Thailand  Co., Ltd.</string>
    <string name="about_toyota_web">http://www.toyota.co.th</string>
    <string name="intro_wait">Please wait for 5 seconds...</string>
    <string name="about_image_right">และลิขสิทธิ์ของรูปเป็นของผู้ผลิตรถยี่ห้อต่างๆโดยตรงโดยอ้างอิงจากทางเว็บไซต์ของผู้ผลิต</string>
    <string name="about_isuzu">6. Tri Petch Isuzu Sales Co., Ltd.</string>
    <string name="about_isuzu_web">http://www.isuzu-tis.com</string>
    <string name="about_chevrolet">7. Chevrolet Sales (Thailand) Limited</string>
    <string name="about_chevrolet_web">http://www.chevrolet.co.th</string>
    <string name="about_mitsubishi">8. Mitsubishi Motors Thailand</string>
    <string name="about_mitsubishi_web">http://www.mitsubishi-motors.co.th</string>
    <string name="Baht">Baht</string>
    <string name="about_suzuki">9. Suzuki Motor (Thailand) Co., Ltd.</string>
    <string name="about_suzuki_web">http://www.suzuki.co.th</string>
    <string name="about_hyundai">10. Hyundai Motor (Thailand) Co., Ltd.</string>
    <string name="about_hyundai_web">http://www.hyundai-motor.co.th</string>
    <string name="car_logo_desc">car brand logo</string>
    <string name="about_kia">11. Yontrakit Kia Motors Co., Ltd.</string>
    <string name="about_kia_web">http://www.kiaglobal.com/th/th/main</string>
    <string name="about_proton_thai">12. Phranakorn Auto Sales Co.,Ltd.</string>
    <string name="about_proton_thai_web">http://www.protonthailand.com</string>
</resources>
